# JARVIS-Reactor

./: .gitignore  .gitmodules  ARCHITECTURE_ADVANCED.md  ARCHITECTURE_VERIFICATION.md  ASYNC_DB_COORDINATOR_V86.md  ASYNC_LIFECYCLE_COORDINATOR_V88.md  CMakeCache.txt  CMakeLists.txt  DISTRIBUTED_HEALTH_MONITOR_V87.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_FIXES_V88.md  MLFORGE_INTEGRATION.md  Makefile  PHASE_2_IMPLEMENTATION.md  README.md  TESTING.md  TRINITY_INTEGRATION_COMPLETE.md  TRINITY_UNIFICATION_V82.md  TRINITY_UNIFICATION_V89.md  UNIFIED_MODEL_MANAGEMENT_V83.md  cmake_install.cmake  compile_commands.json  docker-compose.yml  managed_mode.py  pyproject.toml  run_reactor.py  run_supervisor.py  setup.py  umf_client.py  umf_types.py
bindings/: reactor_bindings.cpp
docker/: Dockerfile.nightshift  Dockerfile.sandbox  sandbox_script.py
reactor_core/: __init__.py  cli.py  voice_integration.py
reactor_core/api/: health_aggregator.py  model_registry.py  scheduler.py  server.py  telemetry.py  training_health.py
reactor_core/bindings/: __init__.py  mlforge_bridge.py
reactor_core/config/: __init__.py  base_config.py  trinity_config.py  unified_config.py
reactor_core/core/: __init__.py  cloud_mode_detector.py  error_handling.py
reactor_core/data/: lineage.py
reactor_core/deployment/: __init__.py  gate.py
reactor_core/eval/: __init__.py
reactor_core/gcp/: __init__.py  checkpointer.py
reactor_core/ingestion/: __init__.py  autonomy_classifier.py  autonomy_event_ingestor.py  base_ingestor.py  telemetry_ingestor.py
reactor_core/integration/: __init__.py  async_db_coordinator.py  async_lifecycle_coordinator.py  cost_bridge.py  cross_repo_ghost_display.py  distributed_health_monitor.py  event_bridge.py  jarvis_connector.py  prime_connector.py  trinity_bridge.py  trinity_connector.py  trinity_experience_receiver.py  trinity_publisher.py  trinity_unification_engine.py
reactor_core/orchestration/: __init__.py  pipeline.py  service_manager.py  trinity_orchestrator.py
reactor_core/schemas/: __init__.py  experience_schema.py
reactor_core/scout/: __init__.py  safe_scout_orchestrator.py  topic_discovery.py  url_validator.py
reactor_core/serving/: __init__.py  hybrid_model_router.py  inference_engine.py  model_server.py  parallel_inference_engine.py  trinity_model_registry.py  unified_model_manager.py
reactor_core/training/: __init__.py  advanced_training.py  causal_reasoning.py  cognitive_modules.py  curriculum_learning.py  distributed_coordinator.py  dpo_pair_generator.py  federated_learning.py  fsdp_training.py  lora.py  meta_learning.py  online_learning.py  shutdown_integration.py  tier2_runtime.py  trainer.py  unified_pipeline.py  world_model_training.py
reactor_core/utils/: __init__.py  async_helpers.py  dependencies.py  dependency_injection.py  distributed_lock.py  environment.py  trinity_lock_bridge.py
scripts/: run_pipeline.py  run_scout.py  start_unified.py
tests/: test_deployment_gate.py  test_experience_snapshots.py  test_job_persistence.py  test_managed_mode_behavior.py  test_managed_mode_contract.py  test_model_lineage.py  test_pipeline_events.py  test_prime_connector_transport.py  test_umf_client_integration.py  test_umf_contract_golden.py  test_umf_heartbeat.py
